--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "particlesjs": "^2.2.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.11.0",
     "react-tsparticles": "^1.18.8"
   },
   "devDependencies": {
