--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   },
   "dependencies": {
     "@mdi/font": "^5.8.55",
+    "@reactchartjs/react-chart.js": "^1.0.0-rc.2",
+    "chart.js": "^2.9.4",
     "gatsby": "^2.24.91",
     "particlesjs": "^2.2.3",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.11.0",
     "react-tsparticles": "^1.18.8"
